--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -9,3 +9,16 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.mierda-anim { 
+  animation: mierda 1s;
+}
+
+@keyframes mierda {
+  0% {
+    background-color: black;
+  }
+  100% {
+    background-color: transparent;
+  }
+}
