Improvement/new graphic style (#92)
* antes sabía que era esto, ahora solo Dios lo sabe

* esta mierda está rota al propósito

* mas cambios que vida

* no se que ise

* mas cambios q ni idea

* muchas cosas... si

* nuevos estilos para los formularios bananos

* cossas

* tratando de hacer que esta basura funcione

* fix bananos por lint y prettier

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,3 +1,5 @@
+@import "@fontsource-variable/rubik";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,4 +8,17 @@ html,
 body {
   width: 100%;
   height: 100%;
+}
+
+.mierda-anim {
+  animation: mierda 1s;
+}
+
+@keyframes mierda {
+  0% {
+    background-color: black;
+  }
+  100% {
+    background-color: transparent;
+  }
 }
