--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,4 +1,6 @@
 @import "@fontsource-variable/rubik";
+@import "@fontsource/opendyslexic/400.css";
+@import "@fontsource/opendyslexic/700.css";
 
 @tailwind base;
 @tailwind components;
@@ -18,6 +20,7 @@ body {
   0% {
     background-color: black;
   }
+
   100% {
     background-color: transparent;
   }
